# rag

./: .gitignore  Dockerfile  chat_ui.py  compose-init.yml  docker-compose.override.yml  docker-compose.yml  embedding.py  generate_rag_prompt.py  hello.py  host.py  langchain_client.py  mcp_setting.json  memo.md  model.py  pyproject.toml  question.py  read_files.py  server.py  split_docs.py
tests/embeddeing/: Dockerfile  docker-compose.yml  model.py  read_files.py
tests/search/: Dockerfile  chroma_util.py  compose-init.yml  docker-compose.override.yml  docker-compose.yml  embedding.py  generate_rag_prompt.py  host.py  model.py  read_files.py
